@@ -1,3 +1,7 @@
+2010-03-26  Jan Nijtmans  <nijtmans@users.sf.net>
+
+	* generic/tclExecute.c   [Bug 2976508] tcl HEAD fails on HP-UX
+
 2010-03-25  Donal K. Fellows  <dkf@users.sf.net>
 
 	* unix/tclUnixFCmd.c (TclUnixCopyFile): [Bug 2976504]: Corrected
